tests/ui/traits/object/supertrait-lifetime-bound.stderr
error: lifetime may not live long enough
  --> $DIR/supertrait-lifetime-bound.rs:10:5
   |
LL | fn test2<'a>() {
   |          -- lifetime `'a` defined here
...
LL |     test1::<dyn Bar<&'a u32>, _>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

